...
    data object About : TopBarMenuAction(
        label = "Über Kliq",
        icon = Icons.Outlined.Info
    )

    data object Logout : TopBarMenuAction(
        label = "Abmelden",
        icon = Icons.Outlined.Logout
    )

    data object DeleteAccount : TopBarMenuAction(
        label = "Profil löschen",
        icon = Icons.Outlined.DeleteForever
...
